Make compatible with new App Chooser

--- a/panorama/res/layout-port/main.xml
+++ b/panorama/res/layout-port/main.xml
@@ -7,6 +7,30 @@
     android:orientation="vertical"
     android:padding="10dp" >
 
+    <LinearLayout
+        android:id="@+id/top_view"
+        android:layout_width="fill_parent"
+        android:layout_height="50dip"
+        android:layout_marginBottom="20dp"
+        android:background="#ff404040"
+        android:orientation="horizontal" >
+
+        <Button
+            android:id="@+id/back_button"
+            android:layout_width="wrap_content"
+            android:layout_height="50dip"
+            android:onClick="back"
+            android:text="Back" />
+
+        <LinearLayout
+            android:id="@+id/top_bar"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:background="#ff404040"
+            android:gravity="right"
+            android:orientation="horizontal" />
+    </LinearLayout>
+    
     <Button
         android:id="@+id/button_start"
         android:layout_width="124dp"
